src/style/styles.less
/* ... */
#hexesDisplay .displayhex.creature.player0,
#hexesOverlay .displayhex.creature.active.player0,
#hexesOverlay .displayhex.creature.selected.player0 {
	background: url('~assets/autoload/phaser/interface/hex_p0.png');
}

/*p1*/
#hexesOverlay .displayhex.creature.player1.ownCreatureHexShade,
#hexesOverlay .displayhex.hover.h_player1 {
	background: url('~assets/autoload/phaser/interface/hex_p1.png') !important;
}

#hexesDisplay .displayhex.creature.player1,
#hexesOverlay .displayhex.creature.active.player1,
#hexesOverlay .displayhex.creature.selected.player1 {
	background: url('~assets/autoload/phaser/interface/hex_hover_p1.png');
}

/*p2*/
#hexesOverlay
	.displayhex.hover.h_player2
	#hexesOverlay
	.displayhex.creature.player2.ownCreatureHexShade {
	background: url('~assets/autoload/phaser/interface/hex_p2.png') !important;
}

#hexesDisplay .displayhex.creature.player2,
#hexesOverlay .displayhex.creature.active.player2,
#hexesOverlay .displayhex.creature.selected.player2 {
	background: url('~assets/autoload/phaser/interface/hex_hover_p2.png');
}

/*p3*/
#hexesOverlay
	.displayhex.hover.h_player3
	#hexesOverlay
	.displayhex.creature.player3.ownCreatureHexShade {
	background: url('~assets/autoload/phaser/interface/hex_p3.png') !important;
}

#hexesDisplay .displayhex.creature.player3,
#hexesOverlay .displayhex.creature.active.player3,
#hexesOverlay .displayhex.creature.selected.player3 {
	background: url('~assets/autoload/phaser/interface/hex_hover_p3.png');
}

#hexesDisplay .displayhex.creature.hidden {
	opacity: 0 !important;
}

#hexesDisplay .displayhex.creature.dashed {
	background: url('~assets/autoload/phaser/interface/hex_dashed.png');
	z-index: 5;
	opacity: 1 !important;
}

/*------------------Creatures------------------*/
#creatureWrapper .creature .effects {
	position: absolute;
	bottom: 100%;
	left: 0;
}

#creatureWrapper .creature {
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	transform-origin: 50% 0;
	transition: opacity 500ms;
}

#creatureWrapper div.creature.flipped {
	transform: scale(-1, 1);
}

#creatureWrapper .creature {
	transition: opacity 500ms;
}

.creature.ghosted {
	opacity: 0.25 !important;
}

.ghosted_hidden {
	opacity: 0.4 !important;
}

.creature.dead {
	opacity: 0 !important;
}

/*-----------------Drops-------------------*/
.drop {
	position: absolute;
	margin-left: 23px;
	margin-top: -4px;
	width: 50px;
	height: 50px;
}

/*-----------------UI-------------------*/
#ui {
	top: 0;
	left: 0;
	display: block;
	width: 0;
	height: 0;
}

#toppanel {
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 3;
}

#bottompanel {
	position: fixed;
	bottom: 0;
	height: 0;
	width: 100%;
	z-index: 1;
}

#rightpanel {
	position: absolute;
	right: 0px;
	top: 0px;
	z-index: 3;
}

#leftpanel {
	position: absolute;
	left: 0;
	z-index: 3;
}

.button:not(.togglescore) {
	background-size: 100% 100%;
	cursor: pointer;
	height: 80px;
	width: 80px;

	&:before {
		content: '';
		display: block;
		position: absolute;
		height: 80px;
		width: 80px;
		background-size: 100% 100%;
		background-image: url('~assets/interface/frame.png');
	}

	&.disabled {
		opacity: 0.5;
	}

	&.hidden {
		display: none;
	}
	&.noclick:hover {
		opacity: 0.5;
	}

	&.upgradeIcon {
		background-image: url('~assets/icons/upgrade.svg') !important;
	}

	&.upgradeTransition {
		transition: background-image 0.5s linear !important;
	}

	&.nextIcon {
		background-image: url('~assets/icons/next.svg') !important;
	}
	&.cancelIcon {
		background-image: url('~assets/icons/cancel.svg') !important;
	}

	&.upgraded.noclick:hover:before {
		opacity: 1;
	}

	&.upgraded:before {
		background-image: url('~assets/interface/frame_upgrade.png');
	}

	&.disabled {
		cursor: not-allowed !important;

		&.ability {
			cursor: help !important;
		}
	}
}

#fullscreen {
	cursor: pointer;
	position: fixed;
	width: 100px;
	text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
	top: 0;
	right: 0;
	z-index: 100;

	div {
		display: block;
		width: 100px;
		height: 100px;
		background-color: rgba(0, 0, 0, 0.55);
		background-image: url('~assets/interface/frame.png'), url('~assets/icons/fullscreen.svg');
		background-repeat: no-repeat;
		background-size: cover;
		margin-bottom: 3px;
	}

	&.fullscreenMode div {
		background-image: url('~assets/interface/frame.png'), url('~assets/icons/contract.svg');
	}
}

.button#fullscreen {
	position: inherit;
	width: 80px;
	height: 80px;
	opacity: 0.8;
	background-color: inherit;
	z-index: inherit;

	div {
		width: 100%;
		height: 100%;
	}
}
.button#skip {
	background-image: url('~assets/autoload/phaser/interface/skip.svg');
}

.button#delay {
	background-image: url('~assets/icons/delay.svg');
}

.button#flee {
	background-image: url('~assets/icons/flee.svg');
}

.button#exit {
	background-image: url('~assets/icons/exit.svg');
}

.p0.player-text.bright {
	color: #f55;
}

.p1.player-text.bright {
	color: #88f;
}

.p2.player-text.bright {
	color: #fa5;
}

.p3.player-text.bright {
	color: #5f5;
}

.p0.player-text {
	color: rgba(255, 0, 0, 1);
}

.p1.player-text {
	color: rgba(0, 0, 255, 1);
}

.p2.player-text {
	color: rgba(255, 172, 0, 1);
}

.p3.player-text {
	color: rgba(0, 255, 0, 1);
}

#playerbutton {
	cursor: pointer;
	position: relative;
	right: 0;
	z-index: 2;
	transition: opacity 0.5s ease;
	background-image: none;
}

#playerbutton .playerinfo,
#playerbutton .hexinfo {
	color: white;
	display: block;
	font-size: 12px;
	font-weight: bold;
	height: 100px;
	width: 90px;
	margin: 1px 0px;
	padding: 0 5px;
	text-align: right;
	text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
	top: 0;
	background-color: rgba(0, 0, 0, 0.55);
}

#playerbutton .hexinfo {
	text-align: center;
}

#playerbutton .vignette {
	height: 100px;
	width: 100px;
	padding: 0;
	margin: 0;
}

.playerinfo p,
.hexinfo p {
	margin: 4px;
}

.playerinfo .name,
.hexinfo .name {
	font-size: 15px;
}
/* ... */

